deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: <your_namespace_previously_created>
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        # complete with the image and tag fields
      - name: redis
        # complete with the image and tag fields
