ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  # namespace: <your_namespace_previously_created>
spec:
  ingressClassName: nginx
  rules:
  - host: webapp.aettua
    # complete
